deploy/k8s/ingress/identity-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-service
  namespace: jchat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: identity.jchat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8091
